# pyaccelsx

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build.yml
dev/: README.md
dev/benchmarking/: openpyxl_test.py  pyaccelsx_test.py  rust_xlsxwriter_test.rs  xlsxwriter_test.py
src/: format.rs  lib.rs  util.rs  value_type.rs  workbook.rs  writer.rs
src/export_excel/: format.rs  mod.rs  workbook.rs
