[package]
name = "pyaccelsx"
version = "0.2.3-dev0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyaccelsx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.3"
rust_xlsxwriter = "0.77.0"

[patch.crates-io]
rust_xlsxwriter = { git = "https://github.com/stanleysie/rust_xlsxwriter" }